project(Gl_View)
find_package (Threads)
find_package (GLUT)
find_package (OpenGL REQUIRED)
set(LINK_FLAGS " -lGL -lGLU -lGLEW -lglut")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LINK_FLAGS}")
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR} ${PROJECT_NAME}_SRCS)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS ${PROJECT_INCLUDE_DIR}/*.h*)
set(${PROJECT_NAME}_SRCS ${${PROJECT_NAME}_SRCS} ${${PROJECT_NAME}_HEADERS})
include_directories("${PROJECT_BINARY_DIR}" ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/RayTracer/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ThreadPool/include)
include_directories(${CMAKE_SOURCE_DIR}/SyncContainer/include)
add_executable(GL_View ${${PROJECT_NAME}_SRCS})
target_link_libraries(GL_View RayTracer ${CMAKE_THREAD_LIBS_INIT} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
include_directories("${PROJECT_INCLUDE_DIR}")
set_target_properties(GL_View PROPERTIES LINKER_LANGUAGE C)
