cmake_minimum_required(VERSION 2.8)
project(RayTracer)
find_package (Threads)
FIND_PACKAGE( Boost 1.50 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
add_definitions(-std=c++14)
#add_definitions(-DDEBUG)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR} ${PROJECT_NAME}_SRCS)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS ${PROJECT_INCLUDE_DIR}/*.h*)
set(${PROJECT_NAME}_SRCS ${${PROJECT_NAME}_SRCS} ${${PROJECT_NAME}_HEADERS})
include_directories("${PROJECT_BINARY_DIR}")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ThreadPool/include)
include_directories(${CMAKE_SOURCE_DIR}/SyncContainer/include)
add_library(RayTracer ${${PROJECT_NAME}_SRCS})
include_directories("${PROJECT_INCLUDE_DIR}")
target_link_libraries(RayTracer ThreadPool SyncContainer ${CMAKE_THREAD_LIBS_INIT})
set_target_properties(RayTracer PROPERTIES LINKER_LANGUAGE C)
