project(UnitTests)
find_package (Threads)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
aux_source_directory(${PROJECT_SOURCE_DIR} ${PROJECT_NAME}_SRCS)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADERS ${PROJECT_INCLUDE_DIR}/*.h*)
set(${PROJECT_NAME}_SRCS ${${PROJECT_NAME}_SRCS} ${${PROJECT_NAME}_HEADERS})
include_directories("${PROJECT_BINARY_DIR}")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/RayTracer/include)
add_executable(UnitTests ${${PROJECT_NAME}_SRCS})
target_link_libraries(UnitTests RayTracer ${CMAKE_THREAD_LIBS_INIT})
include_directories("${PROJECT_INCLUDE_DIR}")
set_target_properties(UnitTests PROPERTIES LINKER_LANGUAGE C)
